main.tf
terraform {
  required_version = ">= 0.12"
}

provider "aws" {
  region = var.aws_region
}

## find availability zones in the region using `aws ec2 describe-availability-zones`
## stick them in a variable and create a list here to be used within the file
locals {
  availability_zones = split(",", var.availability_zones)
}

## create a very generic VPC
resource "aws_vpc" "default" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true

  tags = {
    Name = var.vpc_name
  }
}

## create an internet gateway for the public subnets to enable
## communications to/from web
resource "aws_internet_gateway" "vpc_igw" {
  vpc_id = aws_vpc.default.id

  tags = {
    Name = var.vpc_igw_name
  }
}



resource "aws_subnet" "tf_test_subnet1" {
  vpc_id                  = aws_vpc.default.id
  cidr_block              = "10.0.0.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "eu-west-2a"

  tags = {
    Name = "tf_test_subnet1"
  }
}

resource "aws_subnet" "tf_test_subnet2" {
  vpc_id                  = aws_vpc.default.id
  cidr_block              = "10.0.8.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "eu-west-2b"

  tags = {
    Name = "tf_test_subnet2"
  }
}



## create a private key to be used in the disposable ssl cert we will
## be creating in the next step
resource "tls_private_key" "sample-private-key" {
  algorithm   = var.tls_private_key_algorithm
}

## now create the self-signed cert itself
## in reality and in prod, this won't be needed as most likely we have
## already uploaded our real existing domain certificates to IAM
resource "tls_self_signed_cert" "sample-tls-cert" {
  key_algorithm   = tls_private_key.sample-private-key.algorithm
  private_key_pem = tls_private_key.sample-private-key.private_key_pem

  subject {
    common_name  = var.tls_cert_common_name
    organization = var.tls_cert_org
  }

  validity_period_hours = 12

  allowed_uses = [
    "key_encipherment",
    "digital_signature",
    "server_auth",
  ]
}

## add the certificate to IAM so we can refer to this
## in `certificate_arn` of the load balancer
resource "aws_iam_server_certificate" "sample-iam-cert" {
  name             = var.iam_cert_name
  certificate_body = tls_self_signed_cert.sample-tls-cert.cert_pem
  private_key      = tls_private_key.sample-private-key.private_key_pem
}

## now let's create an Application Load Balancer (ALB) as it's most
## suitable for use case of https->http application-level forwarding
resource "aws_lb" "web-proxy" {
  name               = var.load_balancer_name
  internal           = false
  load_balancer_type = "application"
  subnets            = [aws_subnet.tf_test_subnet1.id,aws_subnet.tf_test_subnet2.id]
}

# ## Security Group for ELB
# resource "aws_security_group" "elb" {
#   name = "terraform-example-elb"
#   egress {
#     from_port = 0
#     to_port = 0
#     protocol = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   ingress {
#     from_port = 80
#     to_port = 80
#     protocol = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

## let's create a target backend group for the ALB so
## we can later attach this to an autoscaling group
## they will be listenning on 80/http
resource "aws_lb_target_group" "web-proxy" {
  name     = var.target_group_name
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.default.id
}

## now let's create the listener and forwarding rules for the lb
## listening on 443/https and forwarding to the backend TG
resource "aws_lb_listener" "web-proxy" {
  load_balancer_arn = aws_lb.web-proxy.arn
  port              = "443"
  protocol          = "HTTPS"
  # ssl_policy        = "ELBSecurityPolicy-2016-08"  ?
  certificate_arn   = "arn:aws:iam::151204058273:server-certificate/senseon_self_signed_cert"  ## this needs to be done better

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.web-proxy.arn
  }
}

## now let's create an ASG
resource "aws_autoscaling_group" "web-asg" {
  availability_zones        = local.availability_zones
  name                      = var.asg_name
  max_size                  = var.asg_max
  min_size                  = var.asg_min
  desired_capacity          = var.asg_desired
  force_delete              = true
  health_check_grace_period = 300
  launch_configuration      = aws_launch_configuration.web-lc.name

  # load_balancers       = [aws_lb.web-proxy.name]
  target_group_arns         = [aws_lb_target_group.web-proxy.arn]   # ===> https://github.com/terraform-aws-modules/terraform-aws-autoscaling/issues/16
                                                                    # `load_balancers` only seem to work with ELB
  tag {
    key                 = "Name"
    value               = "web-asg"
    propagate_at_launch = "true"
  }
}

## and a launch configuration template for EC2 instances
## the asg will attempt to bring up / maintain
resource "aws_launch_configuration" "web-lc" {
  name          = var.launch_config_name
  image_id      = var.aws_amis[var.aws_region]
  instance_type = var.instance_type

  # Security group
  security_groups = [aws_security_group.default.id]
  user_data       = file("install_apache.sh")   ## to display something when we hit
                                                ## the dns given to us by the LB
  lifecycle {
    create_before_destroy = true
  }
}

# Our default security group to access
# the instances over SSH and HTTP
resource "aws_security_group" "default" {
  name        = "terraform_example_sg"
  description = "Used in the terraform"

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTPS access from anywhere
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


# # https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/autoscaling_attachment
# # Create a new ALB Target Group attachment
# resource "aws_autoscaling_attachment" "asg_attachment_bar" {
#   autoscaling_group_name = aws_autoscaling_group.asg.id
#   alb_target_group_arn   = aws_alb_target_group.test.arn
# }




# # target_tracking_configuration - (Optional) A target tracking policy. These have the following structure:
# resource "aws_autoscaling_policy" "example" {
#   # ... other configuration ...
#
#   target_tracking_configuration {
#     predefined_metric_specification {
#       predefined_metric_type = "ASGAverageCPUUtilization"
#     }
#
#     target_value = 40.0
#   }
#
#   target_tracking_configuration {
#     customized_metric_specification {
#       metric_dimension {
#         name  = "fuga"
#         value = "fuga"
#       }
#
#       metric_name = "hoge"
#       namespace   = "hoge"
#       statistic   = "Average"
#     }
#
#     target_value = 40.0
#   }
# }




# module "alb" {
#   source  = "terraform-aws-modules/alb/aws"
#   version = "~> 5.0"
#
#   name = "my-alb"
#
#   load_balancer_type = "application"
#
#   vpc_id             = "vpc-abcde012"
#   subnets            = ["subnet-abcde012", "subnet-bcde012a"]
#   security_groups    = ["sg-edcd9784", "sg-edcd9785"]
#
#   access_logs = {
#     bucket = "my-alb-logs"
#   }
#
#   target_groups = [
#     {
#       name_prefix      = "pref-"
#       backend_protocol = "HTTPS"
#       backend_port     = 443
#       target_type      = "instance"
#     }
#   ]
#
#   https_listeners = [
#     {
#       port                 = 443
#       protocol             = "HTTPS"
#       certificate_arn      = "arn:aws:iam::123456789012:server-certificate/test_cert-123456789012"
#       action_type          = "authenticate-cognito"
#       target_group_index   = 0
#       authenticate_cognito = {
#         user_pool_arn       = "arn:aws:cognito-idp::123456789012:userpool/test-pool"
#         user_pool_client_id = "6oRmFiS0JHk="
#         user_pool_domain    = "test-domain-com"
#       }
#     }
#   ]
#
#   http_tcp_listeners = [
#     {
#       port        = 80
#       protocol    = "HTTP"
#       action_type = "redirect"
#       redirect = {
#         port        = "443"
#         protocol    = "HTTPS"
#         status_code = "HTTP_301"
#       }
#     }
#   ]
#
#   tags = {
#     Environment = "Test"
#   }
# }
